[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/ArenaCleared/ArenaCleared.gd" type="Script" id=1]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Phatone-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/PhatoneBorder16.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/ArenaCleared/ConfettiCannon.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="ArenaCleared" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
kills_label = NodePath("VBoxContainer/MarginContainer/KillsContainer/KillCount")
specials_label = NodePath("VBoxContainer/MarginContainer/KillsContainer/SpecialCount")

[node name="Overlay" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.156863, 0.156863, 0.156863, 0.25098 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 640.0
margin_bottom = 135.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.733333, 0.176471, 1 )
custom_fonts/font = SubResource( 1 )
text = "Arena Cleared"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 139.0
margin_right = 640.0
margin_bottom = 215.0
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="KillsContainer" type="GridContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 590.0
margin_bottom = 76.0
size_flags_vertical = 3
theme = ExtResource( 2 )
columns = 2

[node name="Kills" type="Label" parent="VBoxContainer/MarginContainer/KillsContainer"]
margin_right = 506.0
margin_bottom = 36.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Kills"

[node name="KillCount" type="Label" parent="VBoxContainer/MarginContainer/KillsContainer"]
margin_left = 510.0
margin_right = 540.0
margin_bottom = 36.0
text = "999"
align = 2

[node name="Specials" type="Label" parent="VBoxContainer/MarginContainer/KillsContainer"]
margin_top = 40.0
margin_right = 506.0
margin_bottom = 76.0
text = "Special kills"

[node name="SpecialCount" type="Label" parent="VBoxContainer/MarginContainer/KillsContainer"]
margin_left = 510.0
margin_top = 40.0
margin_right = 540.0
margin_bottom = 76.0
text = "99"
align = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 219.0
margin_right = 640.0
margin_bottom = 265.0
theme = ExtResource( 2 )
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 87.0
margin_right = 231.0
margin_bottom = 46.0
focus_neighbour_right = NodePath("../Menu")
focus_next = NodePath("../Menu")
focus_previous = NodePath("../Menu")
size_flags_horizontal = 6
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 0.509804, 0.705882, 0.890196, 1 )
custom_colors/font_color = Color( 0.258824, 0.615686, 0.952941, 1 )
custom_colors/font_color_hover = Color( 0.211765, 0.564706, 0.894118, 1 )
custom_colors/font_color_pressed = Color( 0.141176, 0.411765, 0.662745, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Continue"
flat = true

[node name="Menu" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 455.0
margin_right = 506.0
margin_bottom = 46.0
focus_neighbour_left = NodePath("../Continue")
focus_next = NodePath("../Continue")
focus_previous = NodePath("../Continue")
size_flags_horizontal = 6
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = "Menu"
flat = true

[node name="ConfettiCannonLeft" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0

[node name="ConfettiCannon" parent="ConfettiCannonLeft" instance=ExtResource( 5 )]
emitting = false
one_shot = true

[node name="ConfettiCannonRight" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ConfettiCannon" parent="ConfettiCannonRight" instance=ExtResource( 5 )]
scale = Vector2( -1, 1 )
emitting = false
one_shot = true

[connection signal="pressed" from="VBoxContainer/ButtonsContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/Menu" to="." method="_on_Menu_pressed"]
